--- a/k8s/php_deployment.yaml
+++ b/k8s/php_deployment.yaml
@@ -1,56 +1,47 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: craftscene-deployment
+  name: craftscene-php-deployment
   namespace: craftscene-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: craftscene
+      app: craftscene-php
   template:
     metadata:
       labels:
-        app: craftscene
+        app: craftscene-php
     spec:
-      volumes:
-        - name: nginx-config-volume
-          configMap:
-            name: nginx-config
       containers:
-        - name: nginx
-          image: 361749389927.dkr.ecr.me-south-1.amazonaws.com/craftscene-nginx
-          ports:
-            - containerPort: 80
-          volumeMounts:
-            - name: nginx-config-volume
-              mountPath: /etc/nginx/nginx.conf
-              subPath: nginx.conf
         - name: php-fpm
-          env:
-            - name: DB_HOST
-              value: rds-cluster.cluster-cleu4grfvxuc.me-south-1.rds.amazonaws.com
-            - name: DB_USERNAME
-              value: craftscene
-            - name: DB_PASSWORD
-              value: 61l=%z1MI?*M5]my
-            - name: DB_DATABASE
-              value: craftscene
-          image: 361749389927.dkr.ecr.me-south-1.amazonaws.com/craftscene-php
+          image: mseel3ttar/craftscene-php:latest
           ports:
             - containerPort: 9000
-#        - name: phpmyadmin
-#          image: phpmyadmin/phpmyadmin:latest
-#          env:
-#            - name: PMA_HOST
-#              value: mysql-service
-#          ports:
-#            - containerPort: 80
+          env:
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: rds-endpoint
+                  key: endpoint
+            - name: DB_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: rds-username
+                  key: username
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: rds-password
+                  key: password
+            - name: DB_DATABASE
+              value: craftscene
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: craftscene-app-service
+  name: craftscene-php-service
   namespace: craftscene-app
 spec:
   selector:
@@ -58,17 +49,4 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-  type: LoadBalancer
-
----
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: phpmyadmin-service
-#spec:
-#  type: NodePort
-#  selector:
-#    app: craftscene
-#  ports:
-#    - port: 8080
-#      targetPort: 80
+  type: NodePort
