--- a/k8s/nginx_deployment.yaml
+++ b/k8s/nginx_deployment.yaml
@@ -19,7 +19,7 @@ spec:
             name: nginx-config
       containers:
         - name: nginx
-          image: mseel3ttar/craftscene-nginx:latest
+          image: 361749389927.dkr.ecr.me-south-1.amazonaws.com/craftscene-nginx:latest
           ports:
             - containerPort: 80
           volumeMounts:
